--- a/src/main/resources/assets/chemcraft/lang/en_us.json
+++ b/src/main/resources/assets/chemcraft/lang/en_us.json
@@ -134,11 +134,9 @@
 	"screen.chemcraft.electrolyzer": "Electrolyzer",
 	"screen.chemcraft.hydrogen_generator": "Hydrogen Generator",
 
+	"gui.jei.category.electrolyzer": "Electrolysis",
+
 
 	"fluid.chemcraft.fluid_brine": "Brine",
-	"tile.chemcraft.fluid_brine": "Brine",
-	
-	
-	
-	"block.chemcraft.test_block": "Test Block"
+	"tile.chemcraft.fluid_brine": "Brine"
 }
